.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Dealer_Website__c.object
<CustomObject>
    <description>Used in conjunction with Digital Audience Analysis (DAA)</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>field to capture the third party contact</description>
        <inlineHelpText>If there is a third party contact for this website please enter the name here</inlineHelpText>
        <label>Contact</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_Name__c</fullName>
        <formula>Related_DAA__r.DAA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>field to capture the email address for the third party contact for the dealer website</description>
        <inlineHelpText>If there is a third party contact for this website please enter the email here</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>How_Long_Has_Website_Been_Established__c</fullName>
        <label>How Long Has Website Been Established?</label>
        <picklist>
            <controllingField>Website_Provider__c</controllingField>
            <picklistValues>
                <fullName>Less than 4 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 4 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_DAA__c</fullName>
        <label>Related DAA</label>
        <referenceTo>Digital_Audience_Analysis__c</referenceTo>
        <relationshipLabel>Dealer Websites</relationshipLabel>
        <relationshipName>Dealer_Websites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Website_Provider_If_Other__c</fullName>
        <inlineHelpText>If &quot;Other&quot; was selected, enter website provider name here</inlineHelpText>
        <label>Website Provider (If Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Provider__c</fullName>
        <inlineHelpText>Select the Dealer&apos;s website provider</inlineHelpText>
        <label>Website Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Autofusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>autoone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClickMotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer E Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ebizautos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorwebs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>searchtopics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dealer Website</label>
    <nameField>
        <label>Dealer Website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Websites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>